# boundless-transceiver

./: .gitignore  Cargo.toml  README.md  foundry.toml  package.json  remappings.txt
.github/workflows/: build_guest_release.yml  contracts.yml  guest.yml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/host/: Cargo.toml
crates/host/src/: lib.rs
crates/zkvm/: Cargo.toml  build.rs
crates/zkvm/guest/: Cargo.toml
crates/zkvm/guest/src/: main.rs
crates/zkvm/src/: lib.rs
script/: DeployEmitter.s.sol  DeployOracle.s.sol  DeployReceiver.s.sol
src/: BeaconEmitter.sol  BlockRootOracle.sol  BoundlessReceiver.sol  BoundlessTransceiver.sol
src/interfaces/: IBlockRootOracle.sol  ICommitmentValidator.sol
src/lib/: Beacon.sol  RiscZeroVerifier.sol
test/: BeaconEmitter.t.sol  BlockRootOracle.t.sol  BoundlessReceiver.t.sol  BoundlessTransceiver.sol  BoundlessTransceiver.t.sol
test/mocks/: DummyReceiver.sol  DummyToken.sol
