[workspace]
resolver = "2"
members = [ "crates/common", "crates/host", "crates/zkvm"]

[workspace.dependencies]
alloy-primitives = { version = "1.0" }
alloy-sol-types = { version = "1.0" }

risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.1.0", default-features = false}
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.1.0", default-features = false}
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.1.0", default-features = false}

risc0-zkvm = { version = "2.3.1", default-features = false }
risc0-build = { version = "2.1", features = ["docker", "unstable"] }

anyhow = { version = "1.0" }
serde = { version = "1.0" }
bincode = { version = "1.3" }
tokio = { version = "1.47" }
tracing = { version = "0.1" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
