[workspace]
resolver = "2"
members = [ "crates/common", "crates/host", "crates/zkvm"]

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
homepage = "https://boundless.network/"
repository = "https://github.com/boundless-xyz/boundless-transceiver"
authors = ["Willem Olding <willem@boundless.network>"]
edition = "2024"

[workspace.dependencies]
alloy = { version = "1.0" }
alloy-primitives = { version = "1.0" }
alloy-sol-types = { version = "1.0" }

risc0-steel = { git = "https://github.com/boundless-xyz/steel", tag = "v2.4.0", default-features = false}
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v3.0.0", default-features = false}
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v3.0.0", default-features = false}

risc0-zkvm = { version = "3.0.3", default-features = false }
risc0-build = { version = "3.0.3", features = ["docker"] }

anyhow = { version = "1.0" }
serde = { version = "1.0" }
bincode = { version = "1.3" }
tokio = { version = "1.47" }
tracing = { version = "0.1" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
