[package]
name = "common"
version = "0.1.0"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
bincode = { workspace = true }
risc0-steel = { workspace = true }
serde = { workspace = true}
