[package]
name = "zkvm"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow = { workspace = true}
alloy = { workspace = true, features = ["full", "node-bindings"] }
common = { path = "../common" }
risc0-steel = { workspace = true, features = ["host"] }
risc0-zkvm = { workspace = true, features = ["std", "unstable", "client"] }
tokio = { workspace = true }

[build-dependencies]
risc0-build = { workspace = true }
risc0-build-ethereum = { workspace = true }

[package.metadata.risc0]
methods = ["guest"]
